fix visible spoiler selecting

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -55,6 +55,9 @@ a, a:visited {
 
 .spoiler:hover {
     filter: blur(0);
+
+    user-select: all;
+
     transition: all 0.5s;
 }
 
